# EarningsCallSentiment

./: .gitignore  README.md  WRITEUP.md  WRITEUP_he.md  pyproject.toml
.github/: copilot-instructions.md
ECT/: AMD_Q1-2024.txt  AMD_Q1-2025.txt  AMD_Q2-2024.txt  AMD_Q2-2025.txt  AMD_Q3-2024.txt  AMD_Q3-2025.txt  AMD_Q4-2023.txt  AMD_Q4-2024.txt  AMD_Q4-2025.txt  AVGO_Q1-2024.txt  AVGO_Q1-2025.txt  AVGO_Q1-2026.txt  AVGO_Q2-2024.txt  AVGO_Q2-2025.txt  AVGO_Q3-2024.txt  AVGO_Q3-2025.txt  AVGO_Q4-2024.txt  AVGO_Q4-2025.txt  BLK_Q1-2024.txt  BLK_Q1-2025.txt  BLK_Q1-2026.txt  BLK_Q2-2024.txt  BLK_Q2-2025.txt  BLK_Q3-2024.txt  BLK_Q3-2025.txt  BLK_Q4-2023.txt  BLK_Q4-2024.txt  BLK_Q4-2025.txt  C_Q1-2024.txt  C_Q1-2025.txt  C_Q2-2024.txt  C_Q2-2025.txt  C_Q3-2024.txt  C_Q3-2025.txt  C_Q4-2023.txt  C_Q4-2024.txt  C_Q4-2025.txt  FAST_2026_01_20.txt  FAST_Q1-2024.txt  FAST_Q1-2025.txt  (+91 more)
data/backtest/: stats.json  trades_ridge_5d.csv
data/extractions_gold/: AMD_Q1-2024.json  AMD_Q1-2025.json  AMD_Q2-2024.json  AMD_Q2-2025.json  AMD_Q3-2024.json  AMD_Q3-2025.json  AMD_Q4-2023.json  AMD_Q4-2024.json  AMD_Q4-2025.json  AVGO_Q1-2024.json  AVGO_Q1-2025.json  AVGO_Q1-2026.json  AVGO_Q2-2024.json  AVGO_Q2-2025.json  AVGO_Q3-2024.json  AVGO_Q3-2025.json  AVGO_Q4-2024.json  AVGO_Q4-2025.json  BLK_Q1-2024.json  BLK_Q2-2024.json  BLK_Q3-2024.json  BLK_Q4-2023.json  FAST_Q3-2025.json  GS_Q4-2025.json  JPM_Q4-2025.json  NVDA_Q2-2026.json  WFC_Q3-2025.json  WFC_Q4-2025.json  _comparison.json
data/features/: _summary.json  features.csv
data/model/: _summary.json  feature_importance.csv  metrics.csv  metrics_summary.csv  metrics_summary_v2.csv  predictions.csv
notebooks/: colab_run.ipynb
tests/: test_main.py
(+9 files in other folders)
