[project]
name = "earnings-call-sentiment"
version = "0.1.0"
description = "Starter package for earnings call sentiment analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Earnings Call Sentiment Team" }
]
dependencies = [
  "ollama>=0.4.0",
  "openai>=1.40",
  "json-repair>=0.30",
  "python-dateutil>=2.9",
  "tqdm>=4.66",
  "yfinance>=0.2.40",
  "pandas>=2.0",
  "scikit-learn>=1.5",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "matplotlib>=3.8",
  "joblib>=1.4",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
earnings-call-sentiment = "earnings_call_sentiment.main:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
